private-nlb-clusters/cluster1/istio/2.3-destinationrule-cluster2-eastwest.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: eastwestgateway-cluster2
  namespace: istio-system
spec:
  host: istio-eastwestgateway.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
